2010-12-31  Richard Sandiford  <rdsandiford@googlemail.com>

	* binutils-all/readelf.exp: Handle MIPS FreeBSD targets.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* lib/binutils-common.exp (regexp_diff): Implement inverse
	matching, requested by `!'.

2010-11-20  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/binutils-common.exp (regexp_diff): New procedure.
	* lib/utils-lib.exp (regexp_diff): Delete.

2010-11-20  Richard Sandiford  <rdsandiford@googlemail.com>

	* lib/binutils-common.exp: New file.
	* lib/utils-lib.exp (load_common_lib): New function.  Load
	binutils-common.exp.
	(is_elf_format): Delete.

2010-11-15  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/compress.exp: Replace binutils_assemble with
	binutils_assemble_flags for --nocompress-debug-sections.

2010-11-15  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/compress.exp: Pass --nocompress-debug-sections to
	assembler for uncompressed debug sections.

	* binutils-all/testranges.d: Also expect .zdebug in section name.

2010-11-08  Thomas Schwinge  <thomas@schwinge.name>

	* lib/utils-lib.exp (is_elf_format): Consider for *-*-gnu*, too.
	* binutils-all/elfedit-2.d (target): Likewise.
	* binutils-all/elfedit-3.d (target): Likewise.
	* binutils-all/i386/i386.exp: Likewise.
	* binutils-all/objcopy.exp: Likewise.
	* binutils-all/strip-3.d (target): Likewise.

2010-11-08  Alan Modra  <amodra@gmail.com>

	* binutils-all/objdump.W: Adjust expected result for debug section
	rename.

2010-11-02  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/libdw2.out: Also accept MIPS_DWARF.

2010-10-29  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/compress.exp: New.
	* binutils-all/dw2-1.S: Likewise.
	* binutils-all/dw2-2.S: Likewise.
	* binutils-all/libdw2-compressed.out: Likewise.
	* binutils-all/libdw2.out: Likewise.

2010-10-22  Mark Mitchell  <mark@codesourcery.com>

	* binutils-all/group-5.d: Expect ".group" for the name of group
	sections.
	* binutils-all/strip-2.d: Likewise.
