@@ -1,3 +1,9 @@
+2010-12-31  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* binutils-all/copy-2.d: Change "hppa" to "hppa*" in not-target list.
+	* binutils-all/copy-3.d: Add hppa*-*-hpux* to not-target list.
+	* binutils-all/objcopy.exp (reverse-bytes): xfail on 32-bit hpux.
+
 2010-12-31  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* binutils-all/readelf.exp: Handle MIPS FreeBSD targets.
